--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -12,6 +12,7 @@
     padding: 10px;
     font-size: 1rem;
     border-radius: 5px;
+    z-index: 99;
 
     .prof {
         display: flex;
